# outsider

./: Cargo.toml  README.md
.github/workflows/: binaries.yml  main.yml
src/: logger.rs  main.rs
