[package]
name = "outsider"
version = "0.4.1"
edition = "2024"
description = "Test artifact changes locally from multiple projects that already use gitlab-art"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]
keywords = ["gitlab", "artifacts", "locally"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
owo-colors = "4.2.0"

[profile.release]
strip = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
